# ai-vkr-gost-kit

./: .gitignore  AGENTS.md  AGENT_PROMPTS_RU.md  README.md  ai-client-vkr-gost-spec.json  word_agent_toolkit.py  Профиль для ИИ агента - ВКР и ДП по ГОСТ.docx  Профиль для ИИ агента - ВКР по ГОСТ.docx
tools/schemegen/: AGENTS.md  README.md  pyproject.toml
tools/schemegen/examples/: coursework_document.json  flowchart_only.json  test_progression.json
tools/schemegen/schemegen/: __init__.py  cli.py  models.py  schema.py  svg_renderer.py
tools/schemegen/tests/: test_cli.py  test_models.py  test_svg_renderer.py
